2014-07-02  Benno Schulenberg  <bensberg@justemail.net>
	* src/proto.h: Add a typedef for a pointer to a function.
	* src/global.c (func_from_key): New wrapper.
	* src/prompt.c (get_prompt_string, do_prompt): Use the new
	wrapper to make the code a bit cleaner.
	* src/help.c (do_help, parse_help_input): Use the wrapper.
	* src/browser.c (do_browser, parse_browser_input): Likewise.
	* src/search.c (search_init, do_gotolinecolumn): Likewise.
	* src/search.c (findnextstr): Replace a call of old wrapper
	'getfuncfromkey()' with	a call of new 'func_from_key()'.
	* src/winio.c (getfuncfromkey): Delete now unneeded wrapper.
	* src/nano.c (usage, main), doc/texinfo/nano.texi: Properly
	exclude the --quiet option when --disable-nanorc was given.

2014-07-01  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_browser), src/help.c (do_help): Make sure
	to always set 'currmenu', so that we can rely on it.
	* src/*.c (get_shortcut): Now that 'currmenu' is really global,
	stop passing it around.
	* src/help.c (help_init), src/winio.c (bottombars): There are
	no tagless functions, so there is no need to check.
	* src/prompt.c (do_prompt, get_prompt_string): Don't pass the
	menu, just set it earlier.
	* src/prompt.c (get_prompt_string): Group the arguments better.
	* src/global.c (shortcut_init), src/browser.c (do_filesearch):
	Show that it is possible to have backwards, regular-expressive
	and case-sensitive searching in the file browser.
	* src/browser.c (filesearch_init, do_filesearch): Now delete
	these abilities again and all provisions for them.
	* src/global.c (shortcut_init): Add two defines to make the
	functions list clearer.

2014-06-30  Mark Majeres  <mark@engine12.com>
	* src/cut.c, src/global.c, src/nano.c: Rename 'cut_till_end' to
	'cut_till_eof', and 'do_cut_till_end' to 'do_cut_till_eof', to
	reduce confusion with CUT_TO_END, which is about end-of-line.

2014-06-30  Benno Schulenberg  <bensberg@justemail.net>