@@ -572,7 +572,7 @@ enum
 /* Extra bits for the undo function. */
 #define UNdel_del		(1<<0)
 #define UNdel_backspace		(1<<1)
-#define UNcut_marked_backwards	(1<<2)
+#define UNcut_marked_forward	(1<<2)
 #define UNcut_cutline		(1<<3)
 #endif /* !NANO_TINY */
 
