@@ -1,3 +1,9 @@
+2014-07-02  Mark Majeres  <mark@engine12.com>
+	* src/text.c (undo_cut, redo_cut, update_undo): Handle the
+	cases of cutting-from-cursor-to-end-of-line properly.
+	* src/nano.c (do_input): Don't preserve the cutbuffer when
+	CUT_TO_END is toggled -- it would intermix two cut types.
+
 2014-07-02  Benno Schulenberg  <bensberg@justemail.net>
 	* src/proto.h: Add a typedef for a pointer to a function.
 	* src/global.c (func_from_key): New wrapper.
